# xiao_yan

./: .gitignore  AGENTS.md  LICENSE  README.md
services/core/: .env.local.example  pyproject.toml
services/core/app/: __init__.py  config.py  config_llm.py  main.py  realtime.py  runtime.py
services/core/app/agent/: autonomy.py  focus_timeline.py  focus_updates.py  loop.py  loop_helpers.py
services/core/app/api/: capabilities_routes.py  capability_audit.py  capability_route_handlers.py  chat_attachments.py  chat_context.py  (+28 more)
services/core/digital_being_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/core/scripts/: goal_admission_canary_pipeline.py  goal_admission_mock_samples.py  goal_admission_phase3_driver.py  goal_admission_replay_compare.py  mempalace_live_observability_preflight.py  mempalace_observability_preflight.py  mempalace_observability_watch.py  start_dev_server.sh
services/core/tests/: conftest.py  test_api_capabilities_contract.py  test_api_capabilities_queue.py  test_api_chat.py  test_api_chat_realtime.py  test_api_config.py  test_api_cors.py  test_api_deps.py  test_api_goals.py  test_api_knowledge.py  test_api_lifecycle.py  test_api_memory.py  test_api_orchestrator.py  test_api_realtime.py  test_api_state.py  test_api_tools_execute_capability_bridge.py  test_api_tools_permissions.py  test_api_world.py  test_approval_workflow.py  test_autonomy.py  test_autonomy_loop.py  test_capability_queue_persistence.py  test_chat_context_focus.py  test_chat_memory_runtime.py  test_chat_postprocess.py  test_chat_submission_runner.py  test_chat_system.py  test_config_paths.py  test_domain_models.py  test_enhanced_gateway.py  test_expression_consistency.py  test_expression_style.py  test_focus_context.py  test_focus_selection.py  test_gateway.py  test_git_workflow.py  test_goal_admission.py  test_goal_admission_canary_pipeline.py  test_goal_admission_canary_summary.py  test_goal_admission_mock_samples.py  (+47 more)
(+616 files in other folders)
