[project]
name = "digital-being-core"
version = "0.1.0"
description = "Core service for the digital being MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "mempalace>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
