[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-being-core"
version = "0.1.0"
description = "Core service for the digital being MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2,<3",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "httpx>=0.27.0",
  "uvicorn>=0.30.0",
]
memory = [
  "mempalace>=3.1.0",
  "chromadb>=0.5,<0.7",
]
docs = [
  "pypdf>=5,<6",
]
full = [
  "pytest>=7.4.0",
  "httpx>=0.27.0",
  "uvicorn>=0.30.0",
  "mempalace>=3.1.0",
  "chromadb>=0.5,<0.7",
  "pypdf>=5,<6",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "tests*", "scripts*"]
